Updates
*Update Java version to 11;
*Changes to Deprecated stuff.